add limit/sort/order params to funcCallSearch()
